# cuddly-spoon

./: .gitignore  pyproject.toml
secrets/: .env.example
src/: alembic.ini  config.py  main.py
src/.migrations/: env.py
src/.migrations/versions/: 2024_08_23_1551-e39081702736_init.py
src/api/: routes.py
src/api/v1/: routes_v1.py
src/api/v1/bot_user/auth/: controller.py
src/api/v1/bot_user/crud/: controller.py  schema.py
src/api/v1/bot_user/job/: controller.py  schema.py
src/api/v1/bot_user/management/: controller.py  schema.py
src/api/v1/user/: controller.py  schema.py
src/core/: celery.py  config.py  database.py  exceptions.py
src/models/: base.py  bot.py  comment.py  task.py  user.py
src/repositories/: base.py  bot.py  comment.py  task.py  user.py
src/services/: base.py  bot.py  comment.py  task.py  user.py
src/tasks/: bot_tasks.py
src/utils/: cache.py  requests.py
src/utils/telegram/user_bot/: bot.py
