[tool.poetry]
name = "spammer-bot"
version = "0.1.0"
description = ""
authors = ["ya.novikov <arhdomain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.36.0"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
celery = "^5.4.0"
redis = "^5.0.8"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
