[tool.poetry]
name = "spammer-bot"
version = "0.1.0"
description = ""
authors = ["ya.novikov <arhdomain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.36.0"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
celery = "^5.4.0"
redis = "^5.0.8"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.9"
black = "^24.8.0"
ruff = "^0.5.7"
coverage = "^7.2.1"


[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
pytest-cov = "5.0.0"
toml = "0.10.2"
pytest-asyncio = "^0.23.6"
pytest-env = "^1.1.3"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"
pytest-sqlalchemy = "^0.2.1"
pytest-xdist = "^3.6.1"



[tool.black]
extend-exclude = 'migrations'
include = '\.pyi?$'
line-length = 88
target-version = ['py311']

[tool.ruff]
lint.ignore = []
lint.select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "*migrations*",
]


# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 18

[tool.bandit]
exclude_dirs = [".venv"]
targets = ["src", "tests"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.pytest.ini_options]
FASTAPI_SETTINGS_MODULE = "src.config"
addopts = "-p no:warnings"
env_override_existing_values = 1
env_files = ["secrets/.envfile"]
python_files = "test_*.py"
pythonpath = ". src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pytest_env]
APP__FRONT_URL = "https://test.com"
APP__SECRET_KEY = "123"
APP__HOST = {value = "localhost", skip_if_set = true}
APP__PORT = {value = "8000", skip_if_set = true}
APP__DEBUG = "True"
APP__SENTRY_DSN = "https://8b8b5754a8435c70af5@test.ru/3"

AWS__ACCESS_KEY_ID = ""
AWS__SECRET_ACCESS_KEY = ""
AWS__STATIC_BUCKET = "test_static"
AWS__MEDIA_BUCKET = "test_media"

DB__NAME = {value = "postgres", skip_if_set = false}
DB__HOST = {value = "localhost", skip_if_set = true}
DB__PORT = "5432"
DB__USER = {value = "postgres", skip_if_set = true}
DB__PASSWORD = {value = "postgres", skip_if_set = true}

EMAIL__HOST="smtp.gmail.com"
EMAIL__USER="main@gmail.com"
EMAIL__PASSWORD="aaaa bbbb cccc dddd"
EMAIL__PORT=465

REDIS__HOST = {value = "redis", skip_if_set = true}
REDIS__PORT = "6379"

AUTH__ACCESS_TOKEN_EXPIRE=1800

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
